--- a/q7/q7/css/style.css
+++ b/q7/q7/css/style.css
@@ -10,6 +10,7 @@
   border-radius: 30px;
   position: relative;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .blowing--box:before,.blowing--box:after{
